--- a/webdev-project.css
+++ b/webdev-project.css
@@ -1,4 +1,3 @@
-.aboutme-container,
 .resume-container,
 .project-container,
 .contactme-container {
@@ -8,8 +7,10 @@
 .resume-container .content h2 {
   color: var(--darkolive);
 }
-.resume-container .list-group-item {
-  background-color: var(--grey4);
+.resume-container,
+.aboutme-container,
+.pcontainer {
+  background-color: var(--gray4);
 }
 .aboutme-container {
   display: block;
